Se genera endpoint para autentificar y generar el json
